// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceWizardSummary component should render correctly amazon 1`] = `
<TextContent>
  <TextList
    component="dl"
  >
    <TextListItem
      component="dt"
    >
      Name
    </TextListItem>
    <TextListItem
      component="dd"
    >
      openshift
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Source Type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Amazon Web Services
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Username
    </TextListItem>
    <TextListItem
      component="dd"
    >
      user_name
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Certificate Authority
    </TextListItem>
    <TextListItem
      component="dd"
    >
      authority
    </TextListItem>
    <TextListItem
      component="dt"
    >
      URL
    </TextListItem>
    <TextListItem
      component="dd"
    >
      neznam.cz
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Password
    </TextListItem>
    <TextListItem
      component="dd"
    >
      123456
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Should validate?
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Yes
    </TextListItem>
  </TextList>
</TextContent>
`;

exports[`SourceWizardSummary component should render correctly ansible-tower 1`] = `
<TextContent>
  <TextList
    component="dl"
  >
    <TextListItem
      component="dt"
    >
      Name
    </TextListItem>
    <TextListItem
      component="dd"
    >
      openshift
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Source Type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Ansible Tower
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Username
    </TextListItem>
    <TextListItem
      component="dd"
    >
      user_name
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Certificate Authority
    </TextListItem>
    <TextListItem
      component="dd"
    >
      authority
    </TextListItem>
    <TextListItem
      component="dt"
    >
      URL
    </TextListItem>
    <TextListItem
      component="dd"
    >
      neznam.cz
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Password
    </TextListItem>
    <TextListItem
      component="dd"
    >
      123456
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Should validate?
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Yes
    </TextListItem>
  </TextList>
</TextContent>
`;

exports[`SourceWizardSummary component should render correctly openshift 1`] = `
<TextContent>
  <TextList
    component="dl"
  >
    <TextListItem
      component="dt"
    >
      Name
    </TextListItem>
    <TextListItem
      component="dd"
    >
      openshift
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Source Type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      OpenShift Container Platform
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Username
    </TextListItem>
    <TextListItem
      component="dd"
    >
      user_name
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Certificate Authority
    </TextListItem>
    <TextListItem
      component="dd"
    >
      authority
    </TextListItem>
    <TextListItem
      component="dt"
    >
      URL
    </TextListItem>
    <TextListItem
      component="dd"
    >
      neznam.cz
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Password
    </TextListItem>
    <TextListItem
      component="dd"
    >
      123456
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Should validate?
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Yes
    </TextListItem>
  </TextList>
</TextContent>
`;
